# GraphBasedSceneRegistration

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: airsim.h  changesim.h  contours.hpp  descriptor.hpp  fileIO.hpp  matcher.hpp  nodes.hpp  plot.hpp  pointCloudExtraction.hpp  registration.hpp  scannet.h  tools.hpp  tools_pcl.hpp  topology.hpp  utils.hpp
python/: 3rscan_link.py  changesim_poses.py  fusion_error.py  fusion_graph.py  fusion_post.py  fusion_success.py  fusion_time.py  label_generator.py  metrics_dataset.py  metrics_graph.py  orientation_checker.py
scripts/: 3rscan_extract.sh  3rscan_link.sh  changesim_link.sh  make_python.sh  make_scripts.sh  metrics.sh  preprocess_changesim_blobs.sh  preprocess_changesim_snodes.sh  preprocess_scannet_blobs.sh  preprocess_scannet_snodes.sh  process.sh  process_changesim.sh  process_scannet.sh  result_merge.sh  result_process.sh  result_redo.sh  scannet_extract.sh  scannet_link.sh  scannet_link_esalab.sh  scannet_link_instance.sh  scannet_orientation.sh
src/: contours.cpp  descriptor.cpp  fileIO.cpp  main.cpp  matcher.cpp  nodes.cpp  plot.cpp  pointCloudExtraction.cpp  registration.cpp  tools.cpp  tools_pcl.cpp  topology.cpp  utils.cpp
